Some basic headers, pages, navigation

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="header.css">
+</head>
 <html>
 <body>
-
-<h1>Mitchell Johnstone's Portfolio</h1>
-
+    <div class="header spread">
+        <a href="hobbies.html">Hobbies</a>
+        <a href="projects.html">Projects</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <a href="#default" class="logo">CompanyLogo</a>
 </body>
 </html>
