Better header, added resume

--- a/projects.html
+++ b/projects.html
@@ -6,13 +6,17 @@
 </head>
 <html>
 <body>
-    <div class="header spread">
-        <a href="hobbies.html">Hobbies</a>
-        <a href="projects.html" class="active">Projects</a>
-        <a href="index.html">Home</a>
-        <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
+    <div class="header">
+        <div class="tabs">
+            <a href="hobbies.html">Hobbies</a>
+            <a href="projects.html" class="active">Projects</a>
+            <a href="index.html" class="logo"><img src="Profile.jpg"></a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </div>
-    <p>Projects Page!</p>
+    <div class="content">
+        <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
+    </div>
 </body>
 </html>
