--- a/resume.html
+++ b/resume.html
@@ -6,14 +6,20 @@
 </head>
 <html>
 <body>
-    <div class="header spread">
-        <a href="hobbies.html">Hobbies</a>
-        <a href="projects.html">Projects</a>
-        <a href="index.html">Home</a>
-        <a href="resume.html" class="active">Resume</a>
-        <a href="contact.html">Contact</a>
+    <div class="header">
+        <div class="tabs">
+            <a href="hobbies.html">Hobbies</a>
+            <a href="projects.html">Projects</a>
+            <a href="index.html" class="logo"><img src="Profile.jpg"></a>
+            <a href="resume.html" class="active">Resume</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </div>
-    <a href="#default" class="logo">CompanyLogo</a>
-    <p>Resume Page!</p>
+    <div class="content">
+        <a href="Resume_23_Sept_2022.pdf">
+            <h1>Mitchell Johnstone's Resume</h1>
+        </a>
+        <iframe src="Resume_23_Sept_2022.pdf" width="100%" height="1000px"></iframe>
+    </div>
 </body>
 </html>
