--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="general.css">
-    <link rel="stylesheet" href="header.css">
-</head>
-<html>
-<body>
-    <div class="header">
-        <div class="tabs">
-            <a href="hobbies.html">Hobbies</a>
-            <a href="projects.html">Projects</a>
-            <a href="index.html" class="logo"><img src="Profile.jpg"></a>
-            <a href="resume.html">Resume</a>
-            <a href="contact.html">Contact</a>
-        </div>
-    </div>
-    <div class="content">
-        <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-    </div>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=html/home.html">
+        <script type="text/javascript">
+            window.location.href = "html/home.html"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='html/home.html'>link to the home page</a>.
+    </body>
 </html>
