--- a/html/projects.html
+++ b/html/projects.html
@@ -57,6 +57,20 @@
         </div>
 
         <hr>
+        <h2>FEAR Robotics</h2>
+        <div class="row">
+            <div class="col_3_span_1">
+                <img src="../resources/Robots/Arm.JPG" alt="">
+            </div>
+            <div class="col_3_span_1">
+            </div>
+            <div class="col_3_span_1">
+                <img src="../resources/Robots/climb.jpg" alt="">
+                <img src="../resources/Robots/Vex.JPG" alt="">
+            </div>
+        </div>
+
+        <hr>
         <h2>Javascript Graphics</h2>
         <div class="row">
             <div class="col_3_span_2">
