Add text for hobbies, projects, home

--- a/html/home.html
+++ b/html/home.html
@@ -27,44 +27,33 @@
     </div>
     <div class="content">
         <div class="row">
-            <div class="col_1">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
+            <div class="col_3_span_1">
+                <img src="../resources/Mitchell/plaid_shirt.jpg" alt="">
+            </div>
+            <div class="col_3_span_1" style="text-align: center; padding:20px;">
+                <h1>Welcome to My Portfolio!</h1>
+                <hr>
+                <p>
+                    Hi! Thanks for visiting!
+                    </p><p>
+                    My name's Mitchell Johnstone, and I'm currently a Junior at the Milwaukee School of Engineering!
+                    </p><p>
+                    I'm set to graduate in May of 2024 with a dual degree of Computer Science and Computer Engineering, with a minor in math.
+                    </p><p>
+                    I love programming in any form with many languages, even programming the entirety of this portfolio in HTML, CSS, and JS.
+                    Aside from computer work, I enjoy reading, cooking, having fun with my friends, and so much more!
+                    </p><p>
+                    Take some time to look through the pages to learn more about me! 
+                    </p><p>
+                    Feel free to contact me with any questions!
+                </p>
+            </div>
+            <div class="col_3_span_1">
+                <img src="../resources/Mitchell/with_origami.JPG" alt="">
             </div>
         </div>
-        <div class="row">
-            <div class="col_2">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
-            <div class="col_2">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col_3_span_1">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
-            <div class="col_3_span_2">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col_3_span_2">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
-            <div class="col_3_span_1">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col_3_span_1">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
-            <div class="col_3_span_1">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
-            <div class="col_3_span_1">
-                <p>According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees dont care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Lets shake it up a little. Barry! Breakfast is ready! Ooming! Hang on a second. Hello? </p>
-            </div>
+        <div>
+            <img src="../resources/Mitchell/thin_bookstore.jpg" alt="">
         </div>
     </div>
     <footer>
