--- a/html/projects.html
+++ b/html/projects.html
@@ -34,6 +34,14 @@
 
         <hr>
         <h2>Embedded Systems</h2>
+        <p>
+            In the embedded systems track at MSOE, students work on a given board to develop programs.
+            The culmination of the work involves us configuring the system itself to route pins and memory addresses.
+            Using VHDL enabled us to communicate with a host of peripherals, including LEDs, servo motors, cameras, joysticks, gyros and LCD screens!
+            </p><p>
+            Honestly, this was my favorite class at MSOE. It was challenging in its complexity, but so satisfying when everything clicked 
+            and worked.
+        </p>
         <div class="row">
             <div class="col_3_span_1">
                 <img src="../resources/Embedded/hello.HEIC" alt="">
@@ -50,6 +58,14 @@
         <h2>Affinity Propogation</h2>
         <div class="row">
             <div class="col_3_span_1">
+                <p>
+                    Machine Learning is extremely complex, but can usually be thought of as a collection of algorithms for understanding data.
+                    </p><p>
+                    For our final project in the course, me and my roomate researched "Affinity Propogation", which is a form of clustering
+                    that enables our data points to relate to each other, communicating about which data points are the best at representing the entire data set.
+                    </p><p>
+                    To explore this algorithm fully, we found a dataset of music, and ran Affinity Propogation on it. The image on the left was the result!
+                </p>
             </div>
             <div class="col_3_span_2">
                 <img src="../resources/affinity_propogation.png" alt="">
@@ -63,6 +79,15 @@
                 <img src="../resources/Robots/Arm.JPG" alt="">
             </div>
             <div class="col_3_span_1">
+                <p>
+                    In High School, I joined the local robotics team, Nicolet FEAR! 
+                    This program ignited my passion for programming, pushing my to apply my skills to a real work problem. 
+                    In just my first year on the team, we went all the way to the world competition!
+                    </p><p>
+                    Branching out from the computer work on the team, using my skills from robotics and fabrication classes, I 
+                    ran for and assumed the role of Vice President of Operations on the team. With my assistance, we were able to
+                    construct many robots, all while learning how to engage with other teams in a graciously professional competition.
+                </p>
             </div>
             <div class="col_3_span_1">
                 <img src="../resources/Robots/climb.jpg" alt="">
@@ -79,7 +104,13 @@
                 </div>
             </div>
             <div class="col_3_span_1">
-                <p>;lkjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</p>
+                <p>
+                    Over the summer, I wanted to try learning a new language: javascript. I wanted to apply my learning on the way, 
+                    so I followed a youtube series on a graphics library, P5.js. I went through many of the topics brought up in the videos,
+                    compiler a repository of javascript animations.
+                    </p><p>
+                    To the left is a simulation of a double pendulum. Try moving the sliders to modify the simulation environment!
+                </p>
             </div>
         </div>
         <div class="row">
@@ -89,17 +120,19 @@
                 </div>
             </div>
             <div class="col_3_span_1">
-                <p>;lkjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</p>
+                <p>
+                    These are 2 more examples of programs I wrote!
+                    </p><p>
+                    To the left is a 3D menger sponge, which is a fractal of cubes. Fractals are so cool! 
+                    </p><p>
+                    On the right, it may look like slowly fading in hair, but it's really a simulation of perlin noise on a grid.
+                    perlin noise is a psuedo-random noise, and using it we can draw really cool shapes! 
+                </p>
             </div>
             <div class="col_3_span_1">
                 <div class="js_container">
                     <iframe src="../js/perlin_noise/web/index.html"></iframe>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col_3_span_2">
-                <p>;lkjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</p>
             </div>
         </div>
     </div>
