--- a/html/resume.html
+++ b/html/resume.html
@@ -31,7 +31,9 @@
         <a href="../resources/Resume_23_Sept_2022.pdf">
             <h1>Mitchell Johnstone's Resume</h1>
         </a>
-        <iframe src="../resources/Resume_23_Sept_2022.pdf" width="100%" height="1000px"></iframe>
+        <div class="js_container">
+            <iframe src="../resources/Resume_23_Sept_2022.pdf" width="100%" height="1000px"></iframe>
+        </div>
     </div>
 
     <footer>
