Update font size

--- a/html/home.html
+++ b/html/home.html
@@ -30,7 +30,7 @@
             <div class="col_3_span_1">
                 <img src="../resources/Mitchell/plaid_shirt.jpg" alt="">
             </div>
-            <div class="col_3_span_1" style="text-align: center; padding:20px;">
+            <div class="col_3_span_1" style="text-align: center;">
                 <h1>Welcome to My Portfolio!</h1>
                 <hr>
                 <p>
@@ -44,8 +44,6 @@
                     Aside from computer work, I enjoy reading, cooking, having fun with my friends, and so much more!
                     </p><p>
                     Take some time to look through the pages to learn more about me! 
-                    </p><p>
-                    Feel free to contact me with any questions!
                 </p>
             </div>
             <div class="col_3_span_1">
