Add descritions, cleaned up, reformated main

--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -34,81 +34,102 @@
             However, I still do my best to branch out and try new things. Here's some examples!
         </p>
 
-        <hr>
-        <h2>Origami</h2>
-        <p>
-            I've always loved folding paper, in whatever form I can. In elementary school I'd 
-            make some paper airplanes to throw and some noise-makers for fun.
-            </p><p>
-            I recently got involved in Modular Origami, which is the process of combining smaller, simpler units to make a 
-            more complex form. Just this past summer, I make an origami torus (essentially a donut) entirely out of post it notes. I used a 
-            <a href="http://matthewdeutsch.com/projects/origami-torus/">template</a> for individual units, and combined 
-            units to creat the final form. 
-            </p><p>
-            View some of my creations below! 
-        </p>
-        <div class="gallery">
-            <img src="../resources/Origami/intersecting_tetrahedrons.HEIC" alt="">
-            <img src="../resources/Origami/big_swan.JPG" alt="">
-            <img src="../resources/Origami/tree.JPG" alt="">
-            <img src="../resources/Origami/phizz_units.HEIC" alt="">
-            <img src="../resources/Origami/pink_box.JPG" alt="">
-            <img src="../resources/Origami/soccer_ball.HEIC" alt="">
-            <img src="../resources/Origami/small_swan.jpg" alt="">
-            <img src="../resources/Origami/colorful_crane.HEIC">
+        <!-- ORIGAMI -->
+        <div>
+            <hr>
+            <h2>Origami</h2>
+            <p>
+                I've always loved folding paper, in whatever form I can. In elementary school I'd 
+                make some paper airplanes to throw and some noise-makers for fun.
+                </p><p>
+                I recently got involved in Modular Origami, which is the process of combining smaller, simpler units to make a 
+                more complex form. Just this past summer, I make an origami torus (essentially a donut) entirely out of post it notes. I used a 
+                <a href="http://matthewdeutsch.com/projects/origami-torus/">template</a> for individual units, and combined 
+                units to creat the final form. 
+                </p><p>
+                View some of my creations below! 
+            </p>
+            <div class="gallery">
+                <img src="../resources/Origami/intersecting_tetrahedrons.HEIC" alt="">
+                <img src="../resources/Origami/big_swan.JPG" alt="">
+                <img src="../resources/Origami/tree.JPG" alt="">
+                <img src="../resources/Origami/phizz_units.HEIC" alt="">
+                <img src="../resources/Origami/pink_box.JPG" alt="">
+                <img src="../resources/Origami/soccer_ball.HEIC" alt="">
+                <img src="../resources/Origami/small_swan.jpg" alt="">
+                <img src="../resources/Origami/colorful_crane.HEIC">
+            </div>
         </div>
 
-        <hr>
-        <h2>Ceramics</h2>
-        <p>
-            In high school, I started learning the fundamentals of ceramics.
-            I always tried to go above and beyond the traditional requirements for the projects, which is why I take me ideas to the next level in complexity.
-            This made the work a lot harder, but I got much more experienced due to the challenge! 
-            </p><p>
-            Now that I'm in college, I don't get a lot of time to work with clay. But when I do, I still enjoy it a lot! Check out some of the things I've made!
-        </p>
-        <div class="gallery">
-            <img src="../resources/Ceramics/wings_cup.JPG" alt="">
-            <img src="../resources/Ceramics/wings_cup_post_kiln.JPG" alt="">
-            <img src="../resources/Ceramics/bulbous_cup_post_kiln.JPG" alt="">
-            <img src="../resources/Ceramics/rope_vase.JPG" alt="">
-            <img src="../resources/Ceramics/rope_vase_glazed.JPG" alt="">
-            <img src="../resources/Ceramics/helm.JPG" alt="">
-            <img src="../resources/Ceramics/helm_glazed.JPG" alt="">
-            <img src="../resources/Ceramics/wheel_vase_tall.JPG" alt="">
-            <img src="../resources/Ceramics/glazed_tall_vase.JPG" alt="">
+        <!-- CERAMICS -->
+        <div>
+            <hr>
+            <h2>Ceramics</h2>
+            <p>
+                In high school, I started learning the fundamentals of ceramics.
+                I always tried to go above and beyond the traditional requirements for the projects, which is why I take me ideas to the next level in complexity.
+                This made the work a lot harder, but I got much more experienced due to the challenge! 
+                </p><p>
+                Now that I'm in college, I don't get a lot of time to work with clay. But when I do, I still enjoy it a lot! Check out some of the things I've made!
+            </p>
+            <div class="gallery">
+                <img src="../resources/Ceramics/wings_cup.JPG" alt="">
+                <img src="../resources/Ceramics/wings_cup_post_kiln.JPG" alt="">
+                <img src="../resources/Ceramics/bulbous_cup_post_kiln.JPG" alt="">
+                <img src="../resources/Ceramics/rope_vase.JPG" alt="">
+                <img src="../resources/Ceramics/rope_vase_glazed.JPG" alt="">
+                <img src="../resources/Ceramics/helm.JPG" alt="">
+                <img src="../resources/Ceramics/helm_glazed.JPG" alt="">
+                <img src="../resources/Ceramics/wheel_vase_tall.JPG" alt="">
+                <img src="../resources/Ceramics/glazed_tall_vase.JPG" alt="">
+            </div>
         </div>
 
-        <hr>
-        <h2>Welding</h2>
-        <p>
-            Nothing terrifies a computer programmer more than melting metal!
-            </p><p>
-            However, I still loved working in robotics, so making things out of metal caught my interest.
-            I took a course in welding, where I made a lot of complex forms for projects. I even did well
-            enough to catch the attention of an art professor, who I helped in welding an art installation
-            at my high school!
+        <!-- WELDING -->
+        <div>
+            <hr>
+            <h2>Welding</h2>
+            <p>
+                Nothing terrifies a computer programmer more than melting metal!
+                </p><p>
+                However, I still loved working in robotics, so making things out of metal caught my interest.
+                I took a course in welding, where I made a lot of complex forms for projects. I even did well
+                enough to catch the attention of an art professor, who I helped in welding an art installation
+                at my high school!
 
-        </p>
-        <div class="gallery">
-            <img src="../resources/Welding/before_strucutre.JPG" alt="">
-            <img src="../resources/Welding/Structure.JPG" alt="">
-            <img src="../resources/Welding/die.JPG" alt="">
-            <img src="../resources/Welding/finished_die.JPG" alt="">
-            <img src="../resources/Welding/weird.JPG" alt="">
-            <img src="../resources/Welding/weird2.JPG" alt="">
-            <img src="../resources/Welding/finished_weird.JPG" alt="">
-            <img src="../resources/Welding/finished_weird2.JPG" alt="">
+            </p>
+            <div class="gallery">
+                <img src="../resources/Welding/before_strucutre.JPG" alt="">
+                <img src="../resources/Welding/Structure.JPG" alt="">
+                <img src="../resources/Welding/die.JPG" alt="">
+                <img src="../resources/Welding/finished_die.JPG" alt="">
+                <img src="../resources/Welding/weird.JPG" alt="">
+                <img src="../resources/Welding/weird2.JPG" alt="">
+                <img src="../resources/Welding/finished_weird.JPG" alt="">
+                <img src="../resources/Welding/finished_weird2.JPG" alt="">
+            </div>
         </div>
 
-        <hr>
-        <h2>Reading</h2>
-        <p>I love reading, specifically science fiction and action! I'm on track to read every novel that won the Hugo Award, and you can see my progress below:</p>
-        <p>Red is what I'm currently reading.</p>
-        <p>Blue is what I've already read.</p>
-        <p>Green is books I have but haven't read.</p>
-        <div class="js_container">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTu-qVocIuk7A1s1CM3cNdeSV2iBx3xBLEva1b4MeFTTgx1_fKRqYVmXryeJNyEs6MPKpX770WHMxIU/pubhtml?widget=true&amp;headers=false"></iframe>
+        <!-- READING -->
+        <div>
+            <hr>
+            <h2>Reading</h2>
+            <p>I love reading, specifically science fiction and action! I'm on track to read every novel that won the Hugo Award, and you can see my progress below.</p>
+            <p>In the excel sheet, each row has the details of the Hugo Award winner for a given year. It also keeps track of my status with the book, following the below color-coding:</p>
+            <ul>
+                <li>
+                    <span style="color: red;">Red:</span> a book that I'm currently reading.
+                </li>
+                <li>
+                    <span style="color: blue;">Blue:</span> a book that I've already read.
+                </li>
+                <li>
+                    <span style="color: green;">Green:</span> a book that I have acquired, but haven't read yet;
+                </li>
+            </ul>
+            <div class="js_container">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTu-qVocIuk7A1s1CM3cNdeSV2iBx3xBLEva1b4MeFTTgx1_fKRqYVmXryeJNyEs6MPKpX770WHMxIU/pubhtml?widget=true&amp;headers=false"></iframe>
+            </div>
         </div>
     </div>
     <footer>
