--- a/html/resume.html
+++ b/html/resume.html
@@ -26,16 +26,14 @@
             <li><a href="resume.html">Resume</a></li>
         </ul>
     </div>
-
     <div class="content">
         <a href="../resources/Resume_23_Sept_2022.pdf">
-            <h1>Mitchell Johnstone's Resume</h1>
+            <h1>Mitchell Johnstone's Resume!</h1>
         </a>
         <div class="js_container">
             <iframe src="../resources/Resume_23_Sept_2022.pdf" width="100%" height="1000px"></iframe>
         </div>
     </div>
-
     <footer>
         <div class="social">
             <a title="Github Profile" href="https://github.com/mitchell-johnstone"><i class="icon ion-social-github"></i></a>
