--- a/html/home.html
+++ b/html/home.html
@@ -26,32 +26,32 @@
         </ul>
     </div>
     <div class="content">
+        <h1>Welcome to My Portfolio!</h1>
+        <hr>
+        <p>
+            Hi! Thanks for visiting!
+            </p><p>
+            My name's Mitchell Johnstone, and I'm currently a Junior at the Milwaukee School of Engineering!
+            </p><p>
+            I'm set to graduate in May of 2024 with a dual degree of Computer Science and Computer Engineering, with a minor in math.
+            I've had multiple jobs and internships to prepare myself for industry.
+            </p><p>
+            I love programming in any form with many languages, even programming the entirety of this portfolio in HTML, CSS, and JS.
+            Aside from computer work, I enjoy reading, cooking, having fun with my friends, and so much more!
+            </p><p>
+            Take some time to look through the pages to learn more about me! 
+        </p>
         <div class="row">
-            <div class="col_3_span_1">
+            <div class="col_4_span_1">
                 <img src="../resources/Mitchell/plaid_shirt.jpg" alt="">
             </div>
-            <div class="col_3_span_1" style="text-align: center;">
-                <h1>Welcome to My Portfolio!</h1>
-                <hr>
-                <p>
-                    Hi! Thanks for visiting!
-                    </p><p>
-                    My name's Mitchell Johnstone, and I'm currently a Junior at the Milwaukee School of Engineering!
-                    </p><p>
-                    I'm set to graduate in May of 2024 with a dual degree of Computer Science and Computer Engineering, with a minor in math.
-                    </p><p>
-                    I love programming in any form with many languages, even programming the entirety of this portfolio in HTML, CSS, and JS.
-                    Aside from computer work, I enjoy reading, cooking, having fun with my friends, and so much more!
-                    </p><p>
-                    Take some time to look through the pages to learn more about me! 
-                </p>
+            <div class="col_4_span_2">
+                <img src="../resources/Mitchell/thin_bookstore.jpg" alt="">
+                <img src="../resources/Mitchell/ComputerLab.jpg" alt="">
             </div>
-            <div class="col_3_span_1">
+            <div class="col_4_span_1">
                 <img src="../resources/Mitchell/with_origami.JPG" alt="">
             </div>
-        </div>
-        <div>
-            <img src="../resources/Mitchell/thin_bookstore.jpg" alt="">
         </div>
     </div>
     <footer>
