Improve footer and resume page colors

--- a/html/resume.html
+++ b/html/resume.html
@@ -28,7 +28,7 @@
     </div>
     <div class="content">
         <a href="../resources/Resume_23_Sept_2022.pdf">
-            <h1>Mitchell Johnstone's Resume!</h1>
+            <h1 style="color:black;">Mitchell Johnstone's Resume!</h1>
         </a>
         <div class="js_container">
             <iframe src="../resources/Resume_23_Sept_2022.pdf" width="100%" height="1000px"></iframe>
